# cpp_sessions

./: .gitignore  README.md  cpp_sessons.sln
C++11_14_demos/: 01_variadic_template.h  02_rvalue_refs.h  03_std_unique_ptrs.h  C++11_14_demos.vcxproj  includes.h  main_cpp1114.cpp
CPP20_Demo/: CPP20_Demo.vcxproj  DesignatedInitializers.h  combining_concepts.h  concepts.h  const_expr_if.h  custom_concepts.h  requires.h  (+4 more)
Demos/: CMakeLists.txt  Demos.vcxproj  demo_LValue_RValue.h  demo_array.h  demo_bind.h  demo_classsize_in_diamond_case.h  demo_consyt_expr.h  demo_custom_smart_pointer.h  demo_diamond_prob.h  demo_employee.h  demo_enums.h  demo_friends.h  demo_inheritance.h  demo_initializer_list.h  demo_kstring.h  demo_lambda_func.h  demo_misc.h  demo_move_semantics.h  demo_smart_pointers.h  demo_static_member.h  demo_templates.h  demo_virtual_operatoroverload.h  demo_weak_ptr.h  main.cpp  plans.txt  ptrs_basics.h  smart_pointer.h  templates_basics.h  unique_pointer.h
TestDemos/: CMakeLists.txt  TestDemos.vcxproj  demo_array.h  demo_auto_few_algo.h  demo_bind.h  demo_classsize_in_diamond_case.h  demo_diamond_prob.h  demo_enums.h  demo_exception_handling.h  demo_inheritance.h  demo_lambda_func.h  demo_misc.h  demo_move_semantics.h  demo_passobjects_lambda_cpp17.h  demo_perfect_forwarding.h  demo_perfect_forwarding_multi_args.h  demo_smart_pointers.h  demo_static_member.h  demo_templates.h  demo_user_defined_literals.h  demo_virtual_operatoroverload.h  demo_weak_ptr.h  emp.txt  file_manger_demo.h  main.cpp  plans.txt  ptrs_basics.h  test_concepts.cpp  variadic_templates.h
(+38 files in other folders)
